# Greybird

dark/: meson.build
dark/gtk-3.0/: meson.build
dark/gtk-4.0/: _gnome-apps.scss  apps  assets  meson.build  settings.ini
light/: meson.build
light/gtk-3.0/: meson.build
light/gtk-4.0/: _common.scss  _unity.scss  _xfce.scss  meson.build
light/gtk-4.0/apps/: granite-widgets.css
